--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,8 +3,8 @@ use_frameworks!
 platform :ios, '13.0'
 
 target 'HitPaySDK_Example' do
-#  pod 'HitPaySDK', :path => '../'
-  pod 'HitPaySDK'
+  pod 'HitPaySDK', :path => '../'
+#  pod 'HitPaySDK'
 
   target 'HitPaySDK_Tests' do
     inherit! :search_paths
